--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,17 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.1.6.RELEASE</spring.version>
 		<log4j.version>1.2.17</log4j.version>
+		<jackson.version>1.9.13</jackson.version>
 	</properties>
 	<dependencies>
+
+		<!-- Jakson -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
 		<!-- JSTL -->
 		<dependency>
 			<groupId>jstl</groupId>
