--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,26 +5,32 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>Spring MVC Application</display-name>
 	<servlet>
-		<servlet-name>dispatcher</servlet-name>
-		<servlet-class>
-                       org.springframework.web.servlet.DispatcherServlet
-                </servlet-class>
+		<servlet-name>myDispacher</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/SpringMvc/myServlet.xml</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
  
 	<servlet-mapping>
-		<servlet-name>dispatcher</servlet-name>
+		<servlet-name>myDispacher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
  
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>/WEB-INF/Config/ApplicationContext.xml</param-value>
 	</context-param>
- 
+
+<!-- 	 <context-param>  -->
+<!-- 		<param-name>contextConfigLocation</param-name> -->
+<!-- 		<param-value>/WEB-INF/SpringMvc/myServlet.xml</param-value> -->
+<!-- 	</context-param> -->
 	<listener>
 		<listener-class>
-                      org.springframework.web.context.ContextLoaderListener
-                </listener-class>
+             org.springframework.web.context.ContextLoaderListener
+         </listener-class>
 	</listener>
 </web-app>
