--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.console.Target=System.out
 log4j.appender.console.ImmediateFlush=true
 #log4j.appender.console.Threshold=${log.console.loglevel}
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%5p [%d{dd-MM-yyyy HH:mm:ss}] [%t] %C.%M(%F:%L) - %m %n
+log4j.appender.console.layout.ConversionPattern=%5p [%d{dd-MM-yyyy HH:mm:ss}] [%t] %C.%M(%F:%L) - %n %m %n
 
 # ----------------------------------------------------------
 # file
