--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>Spring MVC Application</display-name>
+	<listener>
+		<listener-class>
+             org.springframework.web.context.ContextLoaderListener
+         </listener-class>
+	</listener>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
 	<servlet>
 		<servlet-name>myDispacher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -23,14 +31,4 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/Config/ApplicationContext.xml</param-value>
 	</context-param>
-
-<!-- 	 <context-param>  -->
-<!-- 		<param-name>contextConfigLocation</param-name> -->
-<!-- 		<param-value>/WEB-INF/SpringMvc/myServlet.xml</param-value> -->
-<!-- 	</context-param> -->
-	<listener>
-		<listener-class>
-             org.springframework.web.context.ContextLoaderListener
-         </listener-class>
-	</listener>
 </web-app>
