--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,3 +1,6 @@
+#Path Pattern Variable
+path=testPath
+
 ##################################################### LOG4J #####################################################
 log4j.rootLogger = INFO,console,file
 
