--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<spring.version>4.1.6.RELEASE</spring.version>
 		<log4j.version>1.2.17</log4j.version>
 		<jackson.version>1.9.13</jackson.version>
+		<jackson.json.view.version>2.5.2</jackson.json.view.version>
 	</properties>
 	<dependencies>
 
@@ -23,19 +24,19 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.5.2</version>
+			<version>${jackson.json.view.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.5.2</version>
+			<version>${jackson.json.view.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.5.2</version>
+			<version>${jackson.json.view.version}</version>
 		</dependency>
 
 		<!-- JSTL -->
