--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 		<log4j.version>1.2.17</log4j.version>
 		<jackson.version>1.9.13</jackson.version>
 		<jackson.json.view.version>2.5.2</jackson.json.view.version>
+		<commonFileUpload.version>1.3.1</commonFileUpload.version>
+		<commonIO.version>2.4</commonIO.version>
 	</properties>
 	<dependencies>
 
@@ -39,7 +41,20 @@
 			<version>${jackson.json.view.version}</version>
 		</dependency>
 
-		<!-- JSTL -->
+		<!-- Common File Upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commonFileUpload.version}</version>
+		</dependency>
+
+		<!-- Commons IO -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commonIO.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
