Implement 404 Error Handler

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,5 +33,10 @@
 		<servlet-name>Dispatcher-Servlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
- 
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error</location>
+	</error-page>
+  
 </web-app>
