--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,32 @@
 		<jackson.json.view.version>2.5.2</jackson.json.view.version>
 		<commonFileUpload.version>1.3.1</commonFileUpload.version>
 		<commonIO.version>2.4</commonIO.version>
+		<springMongoDbData.version>1.7.0.RELEASE</springMongoDbData.version>
+		<mongdb-java.version>3.0.1</mongdb-java.version>
+		<spring-data-common.version>1.10.0.RELEASE</spring-data-common.version>
 	</properties>
 	<dependencies>
+
+		<!-- Spring-data MongoDb -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>${springMongoDbData.version}</version>
+		</dependency>
+
+		<!-- MongoDb Java Driver -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>${mongdb-java.version}</version>
+		</dependency>
+
+		<!-- Spring Data Common -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>${spring-data-common.version}</version>
+		</dependency>
 
 		<!-- Jakson -->
 		<dependency>
