Restrcture For Package

--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,6 +1,14 @@
 #Path Pattern Variable
 path=testPath
 
+####### MongoDb Connection
+host=localhost
+port=27017
+db=SpringMvcDb
+
+
+
+
 ##################################################### LOG4J #####################################################
 log4j.rootLogger = INFO,console,file
 
