--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -10,12 +10,32 @@ db=SpringMvcDb
 
 
 ##################################################### LOG4J #####################################################
-log4j.rootLogger = INFO,console,file
+log4j.rootLogger = INFO,console,file,stdout
 
 log4j.appender.console.Threshold=ALL
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%5p [%d{dd-MM-yyyy HH:mm:ss}] [%t] %C.%M(%F:%L) - %m %n%n
+
+##################################################### LOG4J MongoDb #####################################################
+#log4j.appender.stdout=org.springframework.data.mongodb.log4j.MongoLog4jAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout.ConversionPattern=%5p [%d{dd-MM-yyyy HH:mm:ss}] [%t] %C.%M(%F:%L) - %m %n%n
+#log4j.appender.stdout.host = ${host}
+#log4j.appender.stdout.port = ${port}
+#log4j.appender.stdout.database = ${db}
+#log4j.appender.stdout.collectionPattern =log_%X{year}_%X{month}
+#log4j.appender.stdout.applicationId = SpringMVcMongoDb
+#log4j.appender.stdout.warnOrHigherWriteConcern = FSYNC_SAFE
+#log4j.category.org.springframework.batch=DEBUG
+#log4j.category.org.springframework.data.document.mongodb=DEBUG
+#log4j.category.org.springframework.transaction=INFO
+# for debugging datasource initialization
+#log4j.category.ed.ws=all
+#log4j.category.org.apache.activemq=ERROR
+#log4j.category.org.springframework.batch=DEBUG
+#log4j.category.org.springframework.data.document.mongodb=DEBUG
+#log4j.category.org.springframework.transaction=INFO
 
 # ----------------------------------------------------------
 # file
